# check_order

./: .env.example  .gitignore  README.md  check_order.spec  main.py  pyproject.toml
.claude/: settings.local.json
app/: paths.py  server.py
app/clients/: piedadmin.py
app/modules/: order_checker.py  report_writer.py  xlsx_parser.py
app/templates/: index.html  result.html
exemple/: 260005913.xls  260006185.xls  260007120.xls  260007133.xls
response/: 260005913_result.txt
