[project]
name = "check-order"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
